--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.netcorner</groupId>
     <artifactId>sqlmapper</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.2.3</version>
 
     <dependencies>
         <!-- Connection Pool 只做测试用-->
