--- a/pom.xml
+++ b/pom.xml
@@ -72,5 +72,12 @@
         </dependency>
         <!-- servlet end -->
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 </project>
