--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,20 @@
         <!-- MySQL end -->
 
         <!-- velocity 必须依赖-->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.velocity</groupId>-->
+            <!--<artifactId>velocity</artifactId>-->
+            <!--<version>1.7</version>-->
+        <!--</dependency>-->
+
+
+
         <dependency>
             <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity</artifactId>
-            <version>1.7</version>
+            <artifactId>velocity-engine-core</artifactId>
+            <version>2.3</version>
         </dependency>
+
         <!-- velocity end -->
 
         <!-- ehcache 必须依赖-->
