--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.netcorner</groupId>
     <artifactId>sqlmapper</artifactId>
-    <version>2.2.2</version>
+    <version>2.3.0</version>
 
     <dependencies>
         <!-- Connection Pool 只做测试用-->
@@ -16,47 +16,57 @@
             <version>1.2.8</version>
         </dependency>
         <!-- Connection Pool end -->
-
-        <!-- MySQL 只做测试用-->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.18</version>
-        </dependency>
-        <!-- MySQL end -->
-
-        <!-- velocity 必须依赖-->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.velocity</groupId>-->
-            <!--<artifactId>velocity</artifactId>-->
-            <!--<version>1.7</version>-->
-        <!--</dependency>-->
-
-
-
+        <!-- velocity模板 begin -->
         <dependency>
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity-engine-core</artifactId>
             <version>2.3</version>
         </dependency>
-
-        <!-- velocity end -->
-
-        <!-- ehcache 必须依赖-->
+        <!-- velocity模板 end -->
+        <!-- ehcache缓存 必须依赖-->
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache</artifactId>
             <version>2.10.4</version>
         </dependency>
-        <!-- ehcache end -->
-
-        <!-- ehcache 必须依赖-->
+        <!-- ehcache缓存 end -->
+        <!-- json转换工具-->
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+            <scope>compile</scope>
         </dependency>
-        <!-- ehcache end -->
+        <!-- json转换工具 end -->
+        <!-- logback日志配置开始 -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-to-slf4j</artifactId>
+            <version>2.11.2</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+            <version>1.7.25</version>
+            <scope>compile</scope>
+        </dependency>
+        <!-- logback日志配置结束 -->
+
+        <!--&lt;!&ndash; ehcache 必须依赖&ndash;&gt;-->
+        <!--<dependency>-->
+        <!--<groupId>log4j</groupId>-->
+        <!--<artifactId>log4j</artifactId>-->
+        <!--<version>1.2.17</version>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash; ehcache end &ndash;&gt;-->
+
 
         <!-- jdbc 必须依赖-->
         <dependency>
@@ -81,12 +91,12 @@
         </dependency>
         <!-- servlet end -->
 
+        <!-- MySQL 只做测试用-->
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.5</version>
-            <scope>compile</scope>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.18</version>
         </dependency>
-
+        <!-- MySQL end -->
     </dependencies>
 </project>
