--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,12 +13,12 @@ log4j.logger.java.sql.Connection = DEBUG
 log4j.logger.java.sql.ResultSet = DEBUG  
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender   
 log4j.appender.fileout=org.apache.log4j.RollingFileAppender  
-log4j.appender.fileout.File=d://sql.log   
+log4j.appender.fileout.File=logs/sql.log
 log4j.appender.fileout.MaxFileSize=10000KB   
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout   
-log4j.appender.stdout.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH:mm:ss} :%m%n   
+log4j.appender.stdout.layout.ConversionPattern=[%-5p] %d  %contextName [%thread] [%l] - %m%n
 log4j.appender.fileout.layout=org.apache.log4j.PatternLayout   
-log4j.appender.fileout.layout.ConversionPattern=[%-5p]_%d{yyyy-MM-dd HH:mm:ss} :%m%n  
+log4j.appender.fileout.layout.ConversionPattern=[%-5p] %d  %contextName [%thread] [%l] - %m%n
 #log4j.appender.stdout.layout=org.apache.log4j.SimpleLayout   
 # log4j.logger.org=info  
 #--------------------------------  
