--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.sqlmapper.location=/Users/shijiufeng/Documents/idea/sqlmapper/target
+#spring.sqlmapper.location=/Users/shijiufeng/Documents/idea/sqlmapper/target
